# tabletrace-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
scripts/: install.js
src/: cli.rs  constants.rs  db.rs  diff.rs  error.rs  input.rs  main.rs  state.rs  types.rs
src/display/: banner.rs  change.rs  diff.rs  history.rs  messages.rs  mod.rs
src/watcher/: changes.rs  handlers.rs  mod.rs  snapshot.rs  stats.rs
