[package]
name = "tabletrace"
version = "0.1.0"
edition = "2021"
authors = ["Monorka Inc."]
description = "Real-time PostgreSQL change monitoring CLI"
license = "MIT"
repository = "https://github.com/monorka/tabletrace-cli"
keywords = ["postgresql", "database", "monitoring", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }
uuid = "1"
postgres-native-tls = "0.5"
native-tls = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[[bin]]
name = "tabletrace"
path = "src/main.rs"

